--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /*I removed the body because I am adding it from javascript*/
+/*Look at lines 235 and 258*/
 
 * {
     -webkit-box-sizing: border-box;
